pkg/lang/syntax/testdata/ub/invalid/selector-body/stack-dotted-encryption-key-source.ub
stack: {
  state: local {}
  encryption: env.key {}
}
